--- a/front/src/app/userinterface/userinterface.component.scss
+++ b/front/src/app/userinterface/userinterface.component.scss
@@ -39,3 +39,33 @@
     padding: 50px;
 }
 
+.error{
+    display: flex;
+    flex-direction: row;
+}
+
+.diag{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%) ;
+    text-align: center;
+}
+
+.diag p{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+.butn{
+    background-color: black;
+    outline: none;
+    border: none;
+    color: white;
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 5px;
+    position: relative;
+}
