--- a/front/src/app/admin/dashboard/dashboard.component.html
+++ b/front/src/app/admin/dashboard/dashboard.component.html
@@ -6,6 +6,6 @@
         <div class="carre" routerLink="/professeur"><b>{{statistiques.totalProfesseurs}} </b>Professeurs</div>
         <div class="carre" routerLink="/tuteur"><b>{{statistiques.totalTuteurs}} </b>Tuteurs</div>
         <div class="carre" routerLink="/entreprise"><b>{{statistiques.totalEntreprises}} </b>Entreprises</div>
+        <div class="carre" routerLink="/promotion"><b>{{statistiques.totalPromotions}} </b>Promotions</div>
     </div>
 </div>
-<app-footer></app-footer>
