--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container autosize>
+<mat-drawer-container style="width: 250px; height: 100%; position: fixed;">
     <mat-drawer-content style="background-color: white;">
         <mat-nav-list>
             <p routerLink="/dashboard">GESTION ECM</p>
