--- a/front/src/app/admin/layout/layout.component.html
+++ b/front/src/app/admin/layout/layout.component.html
@@ -4,5 +4,6 @@
     </mat-drawer>
     <mat-drawer-content>
         <router-outlet></router-outlet>
+        <app-footer></app-footer>
     </mat-drawer-content>
 </mat-drawer-container>
