--- a/front/src/app/admin/professeur/professeur.component.scss
+++ b/front/src/app/admin/professeur/professeur.component.scss
@@ -2,12 +2,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 50px;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .professeur p {
