--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -1,11 +1,14 @@
 .footer {
     background-color: #e7ebef;
     padding: 20px 0;
+    color: #6c757d;
+    position: sticky;
+    top: 100%;
+    height: 60px;
+    width: 100%;
+}
+
+.footer p {
     text-align: center;
     font-size: 14px;
-    color: #6c757d;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
 }
