--- a/front/src/app/admin/tuteur/tuteur.component.html
+++ b/front/src/app/admin/tuteur/tuteur.component.html
@@ -1,11 +1,11 @@
 <div class="tuteur">
     <p>Ajouter ou consulter la liste des tuteurs.</p>
     <div class="ajout">
-        <button>Ajouter</button>
+        <button (click)="ajouterTuteur()">Ajouter</button>
     </div>
     <div class="filtre">
       <label for="">Filtrer la recherche</label>
-      <input type="text" placeholder="Rechercher par des mots clés">
+      <input type="text" placeholder="Rechercher par des mots clés" [(ngModel)]="searchTuteur">
     </div>
     <div class="liste">
         <table class="table table-striped">
@@ -19,7 +19,7 @@
                 <th scope="col">Actions</th>
               </tr>
             </thead>
-            <tbody *ngFor="let tuteur of listeTuteurs">
+            <tbody *ngFor="let tuteur of listeTuteurs | searchFilter: searchTuteur">
               <tr>
                 <td>{{tuteur.no_tuteur}}</td>
                 <td>{{tuteur.qualite_tuteur}}</td>
