--- a/front/src/app/admin/type/type.component.scss
+++ b/front/src/app/admin/type/type.component.scss
@@ -3,12 +3,14 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding: 50px;
 }
 
-.type p {
+p {
+    padding-top: 50px;
+    text-align: center;
     font-size: 25px;
     font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .ajout button {
@@ -43,4 +45,20 @@
     outline: none;
     padding-left: 10px;
     padding: 20px;
+}
+
+td, th {
+    text-align: center;
+}
+
+table {
+    margin-top: 120px;
+    transition: 0.5s;
+}
+
+table:hover {
+    background-color: #31304D;
+    transition: 0.5s;
+    transform: translateX(-5px) translateY(-5px);
+    box-shadow: gray 5px 5px;
 }
