--- a/front/src/app/admin/stage/stage.component.scss
+++ b/front/src/app/admin/stage/stage.component.scss
@@ -4,6 +4,14 @@
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 50px;
+    overflow: hidden;
+    height: 90vh;
+}
+
+.liste {
+    width: 100%;
+    overflow: auto;
+    flex: 1;
 }
 
 .stage p {
@@ -47,4 +55,32 @@
 
 td, th {
     text-align: center;
+}
+
+mat-icon {
+    cursor: pointer;
+    margin-right: 5px;
+    margin-left: 5px;
+    transition: .2s;
+}
+
+mat-icon:hover {
+    color: red;
+    transition: .2s;
+}
+
+td input {
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid gray;
+    width: 120px;
+}
+
+td select {
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid gray;
+    width: 120px;   
 }
