--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -37,6 +37,7 @@ $front-theme: mat.define-light-theme((
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import 'ngx-toastr/toastr';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
