--- a/front/src/app/admin/promotion/promotion.component.html
+++ b/front/src/app/admin/promotion/promotion.component.html
@@ -17,7 +17,7 @@
                 <td>{{promo.annee_promo}}</td>
                 <td>{{promo.nb_etudiants}}</td>
                 <td>
-                  <mat-icon>delete</mat-icon>
+                  <mat-icon (click)="supprimerPromo(promo.annee_promo)">delete</mat-icon>
                 </td>
               </tr>
             </tbody>
