--- a/front/src/app/admin/tuteur/tuteur.component.scss
+++ b/front/src/app/admin/tuteur/tuteur.component.scss
@@ -4,6 +4,15 @@
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 50px;
+    overflow: hidden;
+    height: 90vh;
+    width: 100%;
+}
+
+.liste {
+    width: 100%;
+    overflow: auto;
+    flex: 1;
 }
 
 .tuteur p {
@@ -43,4 +52,36 @@
     outline: none;
     padding-left: 10px;
     padding: 20px;
+}
+
+td, th {
+    text-align: center;
+}
+
+mat-icon {
+    cursor: pointer;
+    padding-right: 5px;
+    padding-left: 5px;
+    transition: .2s;
+}
+
+mat-icon:hover {
+    color: red;
+    transition: .2s;
+}
+
+td input {
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid gray;
+    width: 120px;
+}
+
+td select {
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid gray;
+    width: 120px;   
 }
