--- a/front/src/app/admin/entreprise-popup/entreprise-popup.component.html
+++ b/front/src/app/admin/entreprise-popup/entreprise-popup.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-    <p>Ajouter un professeur.</p>
+    <p>Ajouter une entreprise.</p>
     <mat-form-field>
         <mat-label>N°</mat-label>
         <input matInput [(ngModel)]="newEnt.no_entreprise">
