--- a/front/src/app/admin/promotion/promotion.component.scss
+++ b/front/src/app/admin/promotion/promotion.component.scss
@@ -6,11 +6,11 @@
     padding: 50px;
     overflow: hidden;
     height: 90vh;
+    width: 100%;
 }
 
 .liste {
     overflow: auto;
-    flex: 1;
 }
 
 .promotion p {
