--- a/front/src/app/admin/tuteur-popup/tuteur-popup.component.html
+++ b/front/src/app/admin/tuteur-popup/tuteur-popup.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-    <p>Ajouter un professeur.</p>
+    <p>Ajouter un tuteur.</p>
     <mat-form-field>
         <mat-label>Qualité</mat-label>
         <select matNativeControl [(ngModel)]="newTut.qualite_tuteur">
