--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -26,6 +26,9 @@
             <mat-list-item routerLink="/type" routerLinkActive="active">
                 <button mat-button [disableRipple]="true"><mat-icon>list_alt</mat-icon> Types</button>
             </mat-list-item>
+            <mat-list-item routerLink="/compétence" routerLinkActive="active">
+                <button mat-button [disableRipple]="true"><mat-icon>build</mat-icon> Compétences</button>
+            </mat-list-item>
             <mat-list-item id="logout" (click)="quitter()" routerLink="/">
                 <button mat-button [disableRipple]="true" (click)="quitter()"><mat-icon>exit_to_app</mat-icon> Quitter</button>
             </mat-list-item>
